--- a/res/drawable/drawable_bgr_squared_default.xml
+++ b/res/drawable/drawable_bgr_squared_default.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/btn_ligth_green_color" />
+    <solid android:color="@color/btn_other_green" />
 
     <stroke
-        android:width="4dp"
+        android:width="0dp"
         android:color="@color/white" />
 
     <padding
@@ -14,9 +14,9 @@
         android:top="1dp" />
 
     <corners
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"
-        android:topLeftRadius="0dp"
-        android:topRightRadius="0dp" />
+        android:bottomLeftRadius="1dp"
+        android:bottomRightRadius="1dp"
+        android:topLeftRadius="1dp"
+        android:topRightRadius="1dp" />
 
 </shape>
