--- a/res/drawable/drawable_bgr_squared_pressed.xml
+++ b/res/drawable/drawable_bgr_squared_pressed.xml
@@ -4,8 +4,8 @@
     <solid android:color="@color/btn_dark_green_color" />
 
     <stroke
-        android:width="4dp"
-        android:color="@color/white" />
+        android:width="0dp"
+        android:color="@color/btn_dark_green_color" />
 
     <padding
         android:bottom="1dp"
@@ -14,9 +14,9 @@
         android:top="1dp" />
 
     <corners
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"
-        android:topLeftRadius="0dp"
-        android:topRightRadius="0dp" />
+        android:bottomLeftRadius="1dp"
+        android:bottomRightRadius="1dp"
+        android:topLeftRadius="1dp"
+        android:topRightRadius="1dp" />
 
 </shape>
