--- a/res/layout/activity_testimonios_list.xml
+++ b/res/layout/activity_testimonios_list.xml
@@ -10,22 +10,30 @@
         android:layout_height="wrap_content"
         layout="@layout/actionbar" />
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/actiobarShadow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin" >
+        android:foreground="?android:windowContentOverlay"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin" >
 
-        <LinearLayout
-            android:id="@+id/testimonios_list_vg_container"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:divider="@drawable/divider_horizontal_green"
-            android:orientation="vertical"
-            android:showDividers="middle" />
-    </ScrollView>
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:paddingBottom="@dimen/activity_vertical_margin" >
+
+            <LinearLayout
+                android:id="@+id/testimonios_list_vg_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/drawable_bgr_rounded_white"
+                android:divider="@drawable/divider_horizontal_green"
+                android:foreground="?android:windowContentOverlay"
+                android:orientation="vertical"
+                android:showDividers="middle" />
+        </ScrollView>
+    </FrameLayout>
 
 </LinearLayout>
