--- a/res/drawable/drawable_circle_default.xml
+++ b/res/drawable/drawable_circle_default.xml
@@ -3,13 +3,13 @@
     android:shape="oval" >
 
     <stroke
-        android:width="1dp"
-        android:color="@color/btn_ligth_green_color" />
+        android:width="0dp"
+        android:color="@color/btn_dark_green_color" />
 
-    <solid android:color="@color/btn_ligth_green_color" />
-
+    <solid android:color="@color/btn_other_green" />
+    
     <size
-        android:height="30dp"
-        android:width="30dp" />
+        android:height="50dp"
+        android:width="50dp" />
 
 </shape>
