--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="6" >
+        android:weightSum="7" >
 
         <ImageView
             android:id="@+id/main_logo"
@@ -24,6 +24,7 @@
             android:layout_height="120dp"
             android:layout_weight="2"
             android:contentDescription="@string/app_name"
+            android:layout_gravity="top"
             android:paddingBottom="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
@@ -33,11 +34,13 @@
             android:id="@+id/main_desciption"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:layout_weight="5"
             android:paddingBottom="20dp"
-            android:paddingTop="10dp"
+            android:paddingLeft="0dp"
+            android:paddingStart="0dp"
+            android:paddingRight="20dp"
+            android:paddingEnd="20dp"
+            android:paddingTop="20dp"
             android:text="@string/que_es_justicia"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white"
@@ -95,6 +98,11 @@
             android:src="@drawable/ic_menu_arrow" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/white" />
+
     <LinearLayout
         android:id="@+id/main_btn_option2"
         android:layout_width="match_parent"
@@ -145,6 +153,11 @@
             android:src="@drawable/ic_menu_arrow" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/white" />
+    
     <LinearLayout
         android:id="@+id/main_btn_option3"
         android:layout_width="match_parent"
