--- a/res/layout/activity_seemoredescription.xml
+++ b/res/layout/activity_seemoredescription.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:divider="@drawable/divider_horizontal_gray"
     android:orientation="vertical"
-    android:showDividers="middle"
-    android:divider="@drawable/divider_horizontal_gray" >
+    android:showDividers="middle" >
 
     <include
         android:layout_width="match_parent"
@@ -17,10 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/actiobarShadow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:foreground="?android:windowContentOverlay" >
 
             <mx.com.factico.cide.views.CustomTextView
                 android:id="@+id/seemoredescription_tv_description"
@@ -34,7 +35,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/default_text_color"
                 cide:typefaceRoboto="SourceSansPro_Regular" />
-        </LinearLayout>
+        </FrameLayout>
     </ScrollView>
 
 </LinearLayout>
