--- a/res/layout/activity_testimonios_add.xml
+++ b/res/layout/activity_testimonios_add.xml
@@ -11,11 +11,12 @@
         android:layout_height="wrap_content"
         layout="@layout/actionbar" />
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/actiobarShadow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_testimonio_add"
-        android:orientation="vertical" >
+        android:foreground="?android:windowContentOverlay" >
 
         <ScrollView
             android:layout_width="match_parent"
@@ -23,7 +24,7 @@
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin" >
+            android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -126,21 +127,42 @@
                     android:layout_height="2dp"
                     android:background="@color/btn_ligth_green_color" />
 
-                <mx.com.factico.cide.views.CustomEditText
-                    android:id="@+id/testimonios_add_et_explication"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:ems="10"
-                    android:hint="@string/testimonios_add_explication"
-                    android:inputType="textMultiLine"
-                    android:maxEms="2000"
-                    android:minLines="3"
-                    android:padding="10dp"
-                    android:textColor="@color/default_text_color"
-                    android:textColorHint="@color/hololigth"
-                    android:textSize="15sp"
-                    cide:typefaceRoboto="SourceSansPro_Regular" />
+                    android:background="@color/white"
+                    android:orientation="vertical" >
+
+                    <mx.com.factico.cide.views.CustomEditText
+                        android:id="@+id/testimonios_add_et_explication_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:paddingRight="5dp"
+                        android:paddingEnd="5dp"
+                        android:paddingLeft="0dp"
+                        android:paddingStart="0dp"
+                        android:hint="@string/testimonios_add_explication_count"
+                        android:textColor="@color/default_text_color"
+                        android:textSize="12sp"
+                        cide:typefaceRoboto="SourceSansPro_Light" />
+                    
+                    <mx.com.factico.cide.views.CustomEditText
+                        android:id="@+id/testimonios_add_et_explication"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="@string/testimonios_add_explication"
+                        android:inputType="textMultiLine"
+                        android:maxEms="2000"
+                        android:minLines="3"
+                        android:padding="10dp"
+                        android:textColor="@color/default_text_color"
+                        android:textColorHint="@color/hololigth"
+                        android:textSize="15sp"
+                        cide:typefaceRoboto="SourceSansPro_Regular" />
+                </LinearLayout>
 
                 <mx.com.factico.cide.views.CustomTextView
                     android:id="@+id/testimonios_add_btn_senddata"
@@ -157,6 +179,6 @@
                     cide:typefaceRoboto="RobotoSlab_Regular" />
             </LinearLayout>
         </ScrollView>
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
