--- a/res/layout/activity_testimonios_list.xml
+++ b/res/layout/activity_testimonios_list.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            android:paddingBottom="@dimen/activity_vertical_margin" >
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
 
             <LinearLayout
                 android:id="@+id/testimonios_list_vg_container"
