--- a/res/layout/item_tabhost.xml
+++ b/res/layout/item_tabhost.xml
@@ -3,7 +3,7 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/selector_tab_dark"
+    android:background="@android:color/transparent"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="5dp" >
