--- a/res/layout/activity_propuestas.xml
+++ b/res/layout/activity_propuestas.xml
@@ -11,153 +11,64 @@
         android:layout_height="wrap_content"
         layout="@layout/actionbar" />
 
-    <ScrollView
-        android:id="@+id/propuestas_sv_container"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin" >
+        android:layout_height="match_parent"
+        android:background="@drawable/drawable_bgr_gradient_dark"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:weightSum="5" >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:contentDescription="@string/propuesta_name"
+            android:padding="15dp"
+            android:src="@drawable/ic_splash" />
+
+        <mx.com.factico.cide.views.CustomTextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:gravity="center_horizontal"
+            android:padding="15dp"
+            android:text="@string/propuestas_preview"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/white"
+            cide:typefaceRoboto="SourceSansPro_Regular" />
+    </LinearLayout>
+
+    <TabHost
+        android:id="@+id/propuestas_menu_tabhost"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical" >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="vertical"
-                android:padding="10dp" >
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" >
 
-                <mx.com.factico.cide.views.CustomTextView
-                    android:id="@+id/propuestas_tv_title"
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/propuestas_menu_pager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/activity_vertical_margin"
-                    android:text=""
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/title_color"
-                    cide:typefaceRoboto="SourceSansPro_Bold" />
-
-                <mx.com.factico.cide.views.CustomTextView
-                    android:id="@+id/propuestas_tv_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/activity_vertical_margin"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="@dimen/activity_vertical_margin"
-                    android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/title_color"
-                    cide:typefaceRoboto="SourceSansPro_Regular" />
-            </LinearLayout>
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/propuestas_tv_vote_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:text="@string/propuestas_vote"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/white"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:background="@color/white"
-                android:divider="@drawable/divider_vertical_white"
-                android:orientation="horizontal"
-                android:padding="2dp"
-                android:showDividers="middle" >
-
-                <mx.com.factico.cide.views.CustomTextView
-                    android:id="@+id/propuestas_btn_favor"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/selector_btn_ligth"
-                    android:gravity="center"
-                    android:onClick="voteOnClick"
-                    android:text="@string/propuestas_btn_favor"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    cide:typefaceRoboto="SourceSansPro_Regular" />
-
-                <mx.com.factico.cide.views.CustomTextView
-                    android:id="@+id/propuestas_btn_contra"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/selector_btn_ligth"
-                    android:gravity="center"
-                    android:onClick="voteOnClick"
-                    android:text="@string/propuestas_btn_contra"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    cide:typefaceRoboto="SourceSansPro_Regular" />
-
-                <mx.com.factico.cide.views.CustomTextView
-                    android:id="@+id/propuestas_btn_abstencion"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/selector_btn_ligth"
-                    android:gravity="center"
-                    android:onClick="voteOnClick"
-                    android:text="@string/propuestas_btn_abstencion"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    cide:typefaceRoboto="SourceSansPro_Regular" />
-            </LinearLayout>
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/propuestas_tv_question"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
-
-            <LinearLayout
-                android:id="@+id/propuestas_vg_answers"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:background="@color/white"
-                android:divider="@drawable/divider_vertical_white"
-                android:orientation="horizontal"
-                android:padding="2dp"
-                android:showDividers="middle" />
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:id="@+id/propuestas_btn_answers_vermas"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_btn_ligth"
-                android:gravity="center"
-                android:text="@string/propuestas_btn_comments_vermas"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white"
-                android:visibility="gone"
-                cide:typefaceRoboto="SourceSansPro_Regular" />
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+            
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:fadingEdge="none"
+                android:showDividers="none"
+                android:background="@color/white_alpha" />
         </LinearLayout>
-    </ScrollView>
+    </TabHost>
 
 </LinearLayout>
