--- a/res/layout/fragment_propuestas_comments.xml
+++ b/res/layout/fragment_propuestas_comments.xml
@@ -6,16 +6,12 @@
     android:background="@drawable/drawable_bgr_gradient_dark"
     android:orientation="vertical" >
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/actionbar" />
-
-    <ScrollView
+    <mx.com.factico.cide.views.CustomScrollView
         android:id="@+id/propuestas_comments_sv_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
 
         <LinearLayout
             android:id="@+id/propuestas_comments_vg_container"
@@ -32,7 +28,7 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:showDividers="middle" >
         </LinearLayout>
-    </ScrollView>
+    </mx.com.factico.cide.views.CustomScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,7 +43,11 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/propuestas_btn_comments_hintcomment"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:textColor="@color/default_text_color"
+            android:textColorHint="@color/hololigth"
+            android:textAppearance="@android:attr/textAppearanceSmall"
+            cide:typefaceRoboto="SourceSansPro_Regular" />
 
         <mx.com.factico.cide.views.CustomTextView
             android:id="@+id/propuestas_comments_btn_sendcomment"
