--- a/res/layout/fragment_propuestas_menu.xml
+++ b/res/layout/fragment_propuestas_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<mx.com.factico.cide.views.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
 
     <LinearLayout
         android:id="@+id/fragment_propuestas_vg_container"
@@ -9,11 +10,7 @@
         android:layout_height="wrap_content"
         android:divider="@drawable/divider_horizontal_green"
         android:orientation="vertical"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:showDividers="middle" >
     </LinearLayout>
 
-</ScrollView>
+</mx.com.factico.cide.views.CustomScrollView>
