--- a/res/layout/fragment_propuestas_question.xml
+++ b/res/layout/fragment_propuestas_question.xml
@@ -14,66 +14,68 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white" />
 
-    <ViewFlipper
-        android:id="@+id/propuestas_votes_vf_question"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@color/hololigth" >
 
-        <LinearLayout
+        <ViewFlipper
+            android:id="@+id/propuestas_votes_vf_question"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+            
             <mx.com.factico.cide.views.CustomTextView
                 android:id="@+id/propuestas_votes_tv_question"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingBottom="40dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="40dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/title_color"
                 cide:typefaceRoboto="RobotoSlab_Bold" />
-
+            
             <LinearLayout
-                android:id="@+id/propuestas_votes_vg_answers"
+                android:id="@+id/propuestas_votes_vg_chart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
                 android:orientation="vertical"
-                android:padding="2dp" />
-        </LinearLayout>
+                android:padding="10dp" >
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/propuestas_question_chart_title"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/title_color"
+                    cide:typefaceRoboto="RobotoSlab_Bold" />
+                
+                <mx.com.factico.cide.views.CircleChartView
+                    android:id="@+id/propuestas_votes_chartview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+            </LinearLayout>
+        </ViewFlipper>
 
         <LinearLayout
-            android:id="@+id/propuestas_votes_vg_chart"
+            android:id="@+id/propuestas_votes_vg_answers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:orientation="vertical"
-            android:padding="10dp" >
-
-            <mx.com.factico.cide.views.CustomTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/propuestas_question_chart_title"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/title_color"
-                cide:typefaceRoboto="RobotoSlab_Bold" />
-
-            <mx.com.factico.cide.views.CircleChartView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-        </LinearLayout>
-    </ViewFlipper>
+            android:padding="2dp" />
+    </LinearLayout>
 
 </LinearLayout>
