--- a/res/layout/fragment_propuestas_votes.xml
+++ b/res/layout/fragment_propuestas_votes.xml
@@ -3,10 +3,10 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_bgr_gradient_dark"
     android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp" >
+    android:paddingRight="10dp"
+    android:paddingBottom="10dp" >
 
     <mx.com.factico.cide.views.CustomScrollView
         android:id="@+id/propuestas_votes_sv_container"
