AL momento de argumentar, ya se actualiza la lista de personas que argumentaron

--- a/res/layout/activity_propuestas.xml
+++ b/res/layout/activity_propuestas.xml
@@ -57,7 +57,7 @@
                 android:showDividers="none"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@color/white_alpha" />
+                android:background="@color/white" />
             
             <FrameLayout
                 android:id="@android:id/tabcontent"
