--- a/res/layout/item_propuestas_comments.xml
+++ b/res/layout/item_propuestas_comments.xml
@@ -5,30 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_btn_white"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <mx.com.factico.cide.views.CustomTextView
-        android:id="@+id/item_propuestas_comments_tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/title_color"
-        android:textStyle="bold"
-        cide:typefaceRoboto="SourceSansPro_Bold" />
+    <ImageView
+        android:id="@+id/item_propuestas_comments_iv_user"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:contentDescription="@string/propuesta_name"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher" />
 
-    <mx.com.factico.cide.views.CustomTextView
-        android:id="@+id/item_propuestas_comments_tv_description"
+    <LinearLayout
+        android:id="@+id/item_propuestas_menu_vg_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/default_text_color"
-        cide:typefaceRoboto="SourceSansPro_Regular" />
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
+
+        <mx.com.factico.cide.views.CustomTextView
+            android:id="@+id/item_propuestas_comments_tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/title_color"
+            android:textStyle="bold"
+            cide:typefaceRoboto="SourceSansPro_Bold" />
+
+        <mx.com.factico.cide.views.CustomTextView
+            android:id="@+id/item_propuestas_comments_tv_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/default_text_color"
+            cide:typefaceRoboto="SourceSansPro_Regular" />
+    </LinearLayout>
 
 </LinearLayout>
