--- a/res/layout/item_propuestas_answer.xml
+++ b/res/layout/item_propuestas_answer.xml
@@ -3,6 +3,8 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:orientation="horizontal" >
 
     <mx.com.factico.cide.views.CustomTextView
